@@ -1057,7 +1057,7 @@ int igraph_evolver_mes_ade(const igraph_t *graph,
       }
     }
     /* new node */
-    cidx=VECTOR(*cats)[node];
+    cidx=VECTOR(*cats)[node+1];
     ARRAY3(ntkl, cidx, 0, 0) += 1;
     if (ARRAY3(ntkl, cidx, 0, 0)==1) {
       ARRAY3(ch, cidx, 0, 0)=edges;
@@ -1252,5 +1252,280 @@ int igraph_evolver_error_ade(const igraph_t *graph,
   igraph_vector_destroy(&indegree);
   IGRAPH_FINALLY_CLEAN(2);
   
+  return 0;
+}
+
+/***********************************************/
+/* in-degree, age, cited category              */
+/***********************************************/
+
+int igraph_evolver_e(const igraph_t *graph,
+		     igraph_integer_t niter,
+		     const igraph_vector_t *cats,
+		     igraph_vector_t *kernel,
+		     igraph_vector_t *sd,
+		     igraph_vector_t *norm,
+		     igraph_vector_t *cites,
+		     igraph_vector_t *expected,
+		     igraph_real_t *logprob,
+		     igraph_real_t *lognull,
+		     const igraph_vector_t *debug,
+		     igraph_vector_ptr_t *debugres) {
+  
+  long int no_of_nodes=igraph_vcount(graph);
+  igraph_vector_t st;
+  long int i;
+  igraph_integer_t nocats;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&st, no_of_nodes);
+  for (i=0; i<no_of_nodes; i++) {
+    VECTOR(st)[i]=1;
+  }
+  
+  nocats=igraph_vector_max(cats)+1;
+
+  for (i=0; i<niter; i++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    if (i+1 != niter) {		/* not the last iteration */
+      /* measure */
+      IGRAPH_CHECK(igraph_evolver_mes_e(graph, kernel, 0 /*sd*/, 0 /*norm*/,
+					0 /*cites*/, 0 /*debug*/, 0 /*debugres*/,
+					&st, cats, nocats));
+      
+      /* normalize */
+      igraph_vector_multiply(kernel, 1/igraph_vector_sum(kernel));
+      
+      /* update st */
+      IGRAPH_CHECK(igraph_evolver_st_e(graph, &st, kernel, cats));
+    } else {
+      /* measure */
+      IGRAPH_CHECK(igraph_evolver_mes_e(graph, kernel, sd, norm, cites, debug,
+					debugres,&st, cats, nocats));
+      
+      /* normalize */
+      igraph_vector_multiply(kernel, 1/igraph_vector_sum(kernel));
+      
+      /* update st */
+      IGRAPH_CHECK(igraph_evolver_st_e(graph, &st, kernel, cats));
+
+      /* expected number of citations */
+      if (expected) {
+	IGRAPH_CHECK(igraph_evolver_exp_e(graph, expected, kernel,
+					  &st, cats, nocats));
+      }
+      
+      /* error calculation */
+      if (logprob || lognull) {
+	IGRAPH_CHECK(igraph_evolver_error_e(graph, kernel, &st, cats, nocats,
+					    logprob, lognull));
+      }
+    }
+
+  }
+  
+  igraph_vector_destroy(&st);
+  IGRAPH_FINALLY_CLEAN(1);
+  
+  return 0;
+}
+
+int igraph_evolver_mes_e(const igraph_t *graph,
+			 igraph_vector_t *kernel,
+			 igraph_vector_t *sd,
+			 igraph_vector_t *norm,
+			 igraph_vector_t *cites,
+			 const igraph_vector_t *debug,
+			 igraph_vector_ptr_t *debugres,
+			 const igraph_vector_t *st,
+			 const igraph_vector_t *cats,
+			 igraph_integer_t pnocats) {
+  
+  long int classes=pnocats;
+  long int no_of_nodes=igraph_vcount(graph);
+  
+  igraph_vector_t v_normfact, *normfact;
+  igraph_vector_t v_notnull, *notnull;
+  igraph_vector_t ntk, ch;
+  
+  igraph_vector_t neis;
+  
+  long int node, i, edges=0;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&ntk, classes);
+  IGRAPH_VECTOR_INIT_FINALLY(&ch, classes);
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  if (norm) { 
+    normfact=norm;
+    IGRAPH_CHECK(igraph_vector_resize(normfact, classes));
+    igraph_vector_null(normfact);
+  } else {
+    normfact=&v_normfact;
+    IGRAPH_VECTOR_INIT_FINALLY(normfact, classes);
+  }
+  if (cites) {
+    notnull=cites;
+    IGRAPH_CHECK(igraph_vector_resize(notnull, classes));
+    igraph_vector_null(notnull);
+  } else {
+    notnull=&v_notnull;
+    IGRAPH_VECTOR_INIT_FINALLY(notnull, classes);
+  }
+  
+  IGRAPH_CHECK(igraph_vector_resize(kernel, classes));
+  igraph_vector_null(kernel);
+  if (sd) {
+    IGRAPH_CHECK(igraph_vector_resize(sd, classes));
+    igraph_vector_null(sd);
+  }
+  
+  VECTOR(ntk)[ (long int) VECTOR(*cats)[0] ]=1;
+  
+  for (node=0; node<no_of_nodes-1; node++) {
+    long int cidx;
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* Estimate A() */
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, node+1, IGRAPH_OUT));
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int idx=VECTOR(*cats)[to];
+      
+      double xk=VECTOR(*st)[node]/VECTOR(ntk)[idx];
+      double oldm=VECTOR(*kernel)[idx];
+      VECTOR(*notnull)[idx] += 1;
+      VECTOR(*kernel)[idx] += (xk-oldm)/VECTOR(*notnull)[idx];
+      if (sd) {
+	VECTOR(*sd)[idx] += (xk-oldm)*(xk-VECTOR(*kernel)[idx]);
+      }
+      /* TODO: debug */
+    }
+    
+    /* Update ntk & co */
+    edges += igraph_vector_size(&neis);
+    cidx=VECTOR(*cats)[node+1];
+    VECTOR(ntk)[cidx] += 1;
+    if (VECTOR(ntk)[cidx]==1) {
+      VECTOR(ch)[cidx]=edges;
+    }
+    
+  }
+
+  /* Make normfact up to data, calculate mean, sd */
+  for (i=0; i<classes; i++) {
+    igraph_real_t oldmean;
+    if (VECTOR(ntk)[i] != 0) {
+      VECTOR(*normfact)[i] += (edges-VECTOR(ch)[i]);
+    }
+    if (VECTOR(*normfact)[i]==0) {
+      VECTOR(*kernel)[i]=0;
+      VECTOR(*normfact)[i]=1;
+    }
+    oldmean=VECTOR(*kernel)[i];
+    VECTOR(*kernel)[i] *= VECTOR(*notnull)[i]/VECTOR(*normfact)[i];
+    if (sd) {
+      VECTOR(*sd)[i] += oldmean*oldmean*VECTOR(*notnull)[i] *
+	(1-VECTOR(*notnull)[i]/VECTOR(*normfact)[i]);
+      VECTOR(*sd)[i] = sqrt(VECTOR(*sd)[i]/(VECTOR(*normfact)[i]-1));
+    }
+  }
+  
+  if (!cites) {
+    igraph_vector_destroy(notnull);
+    IGRAPH_FINALLY_CLEAN(1);
+  }
+  if (!norm) {
+    igraph_vector_destroy(normfact);
+    IGRAPH_FINALLY_CLEAN(1);
+  }
+  igraph_vector_destroy(&neis);
+  igraph_vector_destroy(&ch);
+  igraph_vector_destroy(&ntk);
+  IGRAPH_FINALLY_CLEAN(3);
+
+  return 0;
+}
+
+int igraph_evolver_st_e(const igraph_t *graph,
+			igraph_vector_t *st,
+			const igraph_vector_t *kernel,
+			const igraph_vector_t *cats) {
+
+  long int no_of_nodes=igraph_vcount(graph);
+  
+  long int node;
+  
+  IGRAPH_CHECK(igraph_vector_resize(st, no_of_nodes));
+  
+  VECTOR(*st)[0]=VECTOR(*kernel)[ (long int) VECTOR(*cats)[0] ];
+  
+  for (node=1; node<no_of_nodes; node++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* new node */
+    VECTOR(*st)[node]=
+      VECTOR(*st)[node-1]+VECTOR(*kernel)[ (long int) VECTOR(*cats)[node] ];
+    
+  }
+  
+  return 0;
+}
+
+int igraph_evolver_exp_e(const igraph_t *graph,
+			 igraph_vector_t *expected,
+			 const igraph_vector_t *kernel,
+			 const igraph_vector_t *st,
+			 const igraph_vector_t *cats,
+			 igraph_integer_t pnocats) {
+  /* TODO */
+  return 0;
+}
+
+int igraph_evolver_error_e(const igraph_t *graph,
+			   const igraph_vector_t *kernel,
+			   const igraph_vector_t *st,
+			   const igraph_vector_t *cats,
+			   igraph_integer_t pnocats,
+			   igraph_real_t *logprob,
+			   igraph_real_t *lognull) {
+
+  long int no_of_nodes=igraph_vcount(graph);
+  igraph_vector_t neis;
+  long int node, i;
+
+  igraph_real_t rlogprob, rlognull, *mylogprob=logprob, *mylognull=lognull;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+
+  if (!logprob) { mylogprob=&rlogprob; }
+  if (!lognull) { mylognull=&rlognull; }
+  
+  *mylogprob=0;
+  *mylognull=0;
+  
+  for (node=0; node<no_of_nodes-1; node++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, node+1, IGRAPH_OUT));
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int cidx=VECTOR(*cats)[to];
+      
+      igraph_real_t prob=VECTOR(*kernel)[cidx]/VECTOR(*st)[node];
+      igraph_real_t nullprob=1.0/(node+1);
+      
+      *mylogprob += log(prob);
+      *mylognull += log(nullprob);
+    }
+    
+  }
+  
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(1);
+
   return 0;
 }
